@@ -484,6 +484,8 @@ static struct fuse_operations xmp_oper = {
 	.removexattr	= xmp_removexattr,
 #endif
 	.lock		= xmp_lock,
+
+	.flag_nullpath_ok = 1,
 };
 
 int main(int argc, char *argv[])
